Update demo link and remove demo section
Updated demo link and removed demo section.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         A planning metric tailored for India to spotlight districts at greater
         socio‑economic risk during public health crises and disasters.
       </p>
-      <a href="#demo" class="btn">🚀 Try the Preview</a>
+      <a href="https://vennby.github.io/sevi/" class="btn">🚀 Try the Preview</a>
       <a href="Vennela_Project_Research.pdf" class="btn" download
         >📄 Download Paper</a
       >
@@ -237,22 +237,6 @@
           <h3>3+</h3>
           <p>Equity Patterns Detected</p>
         </div>
-      </div>
-    </section>
-
-    <section id="demo">
-      <h2>Demo Preview</h2>
-      <p>Select a district to see indicative SEVI output (mock data).</p>
-      <select
-        id="district"
-        style="margin-top: 1rem; padding: 0.5rem; border-radius: 0.5rem"
-      >
-        <option>Hyderabad</option>
-        <option>Visakhapatnam</option>
-        <option>Warangal</option>
-      </select>
-      <div id="demo-output" class="card" style="margin-top: 1rem">
-        Choose a district...
       </div>
     </section>
 
