Update preview link in index.html

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         A planning metric tailored for India to spotlight districts at greater
         socio‑economic risk during public health crises and disasters.
       </p>
-      <a href="https://vennby.github.io/sevi/" class="btn">🚀 Try the Preview</a>
+      <a href="https://venn-sevi.streamlit.app/" class="btn">🚀 Try the Preview</a>
       <a href="Vennela_Project_Research.pdf" class="btn" download
         >📄 Download Paper</a
       >
