--- a/index.html
+++ b/index.html
@@ -1,318 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SEVI — Socio‑Economic Vulnerability Index</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-      }
-      body {
-        font-family: "Inter", sans-serif;
-        background: linear-gradient(to bottom, #020617, #0f172a, #1e293b);
-        color: white;
-        line-height: 1.6;
-        overflow-x: hidden;
-      }
-      header {
-        position: sticky;
-        top: 0;
-        z-index: 1000;
-        background: rgba(0, 0, 0, 0.5);
-        backdrop-filter: blur(8px);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        padding: 1rem 2rem;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-      header nav a {
-        margin-left: 1.5rem;
-        font-size: 0.9rem;
-        color: rgba(255, 255, 255, 0.8);
-        text-decoration: none;
-        transition: color 0.2s;
-      }
-      header nav a:hover {
-        color: white;
-      }
-      section {
-        padding: 5rem 2rem;
-        max-width: 1100px;
-        margin: auto;
-      }
-      h1,
-      h2,
-      h3 {
-        font-weight: 800;
-      }
-      h1 {
-        font-size: 2.8rem;
-      }
-      h2 {
-        font-size: 2rem;
-        margin-bottom: 1rem;
-      }
-      .pill {
-        display: inline-block;
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 9999px;
-        padding: 0.3rem 0.8rem;
-        font-size: 0.75rem;
-        margin-right: 0.5rem;
-      }
-      .btn {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        background: white;
-        color: black;
-        padding: 0.7rem 1.4rem;
-        border-radius: 1rem;
-        font-weight: 600;
-        text-decoration: none;
-        margin-right: 1rem;
-        transition: transform 0.2s, background 0.2s;
-      }
-      .btn:hover {
-        background: #f3f4f6;
-        transform: scale(1.03);
-      }
-      .card {
-        background: rgba(255, 255, 255, 0.05);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        border-radius: 1.5rem;
-        padding: 1.5rem;
-        margin-top: 1rem;
-      }
-      .grid {
-        display: grid;
-        gap: 1.5rem;
-      }
-      .grid-2 {
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      }
-      .stat {
-        text-align: center;
-      }
-      .stat p {
-        margin-top: 0.3rem;
-        color: rgba(255, 255, 255, 0.7);
-      }
-      footer {
-        text-align: center;
-        padding: 2rem;
-        font-size: 0.8rem;
-        color: rgba(255, 255, 255, 0.6);
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <div
-        style="
-          font-weight: 800;
-          display: flex;
-          align-items: center;
-          gap: 0.5rem;
-        "
-      >
-        <div
-          style="
-            background: linear-gradient(to bottom right, #d946ef, #34d399);
-            width: 32px;
-            height: 32px;
-            display: grid;
-            place-items: center;
-            border-radius: 8px;
-            color: black;
-            font-weight: 700;
-          "
-        >
-          S
-        </div>
-        SEVI
-      </div>
-      <nav>
-        <a href="#problem">Problem</a>
-        <a href="#solution">Solution</a>
-        <a href="#results">Results</a>
-        <a href="#demo">Demo</a>
-        <a href="#roadmap">Roadmap</a>
-        <a href="#team">Team</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>SEVI</title>
+  <!-- Link to external CSS file -->
+  <link rel="stylesheet" href="static/styles.css">
+  <link rel="icon" href="static/assets/logo.png">
+</head>
+<body>
+  <!-- Hero section containing the map and tooltip -->
+  <section id="hero">
+    <!-- Tooltip for displaying SEVI scores -->
+    <div id="tooltip" class="tooltip"></div>
+  </section>
 
-    <section id="home" style="text-align: center">
-      <h1>SEVI — Socio‑Economic Vulnerability Index</h1>
-      <p
-        style="
-          max-width: 700px;
-          margin: 1rem auto;
-          color: rgba(255, 255, 255, 0.8);
-        "
-      >
-        A planning metric tailored for India to spotlight districts at greater
-        socio‑economic risk during public health crises and disasters.
-      </p>
-      <a href="https://venn-sevi.streamlit.app/" class="btn">🚀 Try the Preview</a>
-      <a href="Vennela_Project_Research.pdf" class="btn" download
-        >📄 Download Paper</a
-      >
-      <div class="grid grid-2" style="margin-top: 2rem">
-        <div class="stat">
-          <h3>99.64%</h3>
-          <p>Decision Tree Accuracy</p>
-        </div>
-        <div class="stat">
-          <h3>1.96M</h3>
-          <p>Data Points</p>
-        </div>
-        <div class="stat">
-          <h3>80+</h3>
-          <p>Features</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="problem">
-      <h2>Why India needs SEVI</h2>
-      <p>
-        During COVID‑19, unequal access, under‑resourced systems, and uneven
-        density exposed how vulnerability clusters across districts. A single
-        national score isn’t enough—planners need granular, equity‑aware
-        signals.
-      </p>
-      <ul style="margin-top: 1rem; margin-left: 1.5rem">
-        <li>District‑level visibility for relief and resource allocation</li>
-        <li>Pre‑positioning before floods, heatwaves, or outbreaks</li>
-        <li>Transparent, data‑driven rationale for allocations</li>
-      </ul>
-    </section>
-
-    <section id="solution">
-      <h2>How SEVI works</h2>
-      <div class="grid grid-2" style="margin-top: 1rem">
-        <div class="card">
-          Feature mapping: US SVI variables → Indian equivalents
-        </div>
-        <div class="card">
-          Transfer learning: Pre‑train on US counties, adapt to Indian
-          distributions
-        </div>
-        <div class="card">
-          Theme modules: Caste + Metro first; healthcare next
-        </div>
-        <div class="card">
-          Evaluation: Validated against vaccination coverage quartiles
-        </div>
-      </div>
-    </section>
-
-    <section id="results">
-      <h2>Results</h2>
-      <p>
-        Baseline achieves 99.64% accuracy; ensemble improves stability. No A↔D
-        misclassifications, strong F1 across classes.
-      </p>
-      <div class="grid grid-2" style="margin-top: 1rem">
-        <div class="stat">
-          <h3>~1.00</h3>
-          <p>Macro F1</p>
-        </div>
-        <div class="stat">
-          <h3>0</h3>
-          <p>Extreme Misclassifications</p>
-        </div>
-        <div class="stat">
-          <h3>3+</h3>
-          <p>Equity Patterns Detected</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="roadmap">
-      <h2>Roadmap</h2>
-      <div class="grid grid-2" style="margin-top: 1rem">
-        <div class="card"><strong>Q3 2025</strong><br />Pilot & validation</div>
-        <div class="card"><strong>Q4 2025</strong><br />Public demo & API</div>
-        <div class="card"><strong>Q1 2026</strong><br />Global template</div>
-      </div>
-    </section>
-
-    <section id="team">
-      <h2>Team</h2>
-      <div class="card">
-        <h3>Vennela Vallabhaneni</h3>
-        <p>Department of Computer Science, BITS Pilani – Dubai</p>
-        <p>
-          Focus: equitable planning metrics, interpretable ML, transfer learning
-          for low‑data contexts.
-        </p>
-      </div>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <form
-        onsubmit="alert('Thanks! Your message has been noted for the demo.'); return false;"
-        style="margin-top: 1rem; display: grid; gap: 1rem; max-width: 500px"
-      >
-        <input
-          type="text"
-          placeholder="Your name"
-          required
-          style="padding: 0.8rem; border-radius: 0.5rem"
-        />
-        <input
-          type="email"
-          placeholder="Email"
-          required
-          style="padding: 0.8rem; border-radius: 0.5rem"
-        />
-        <textarea
-          placeholder="Message"
-          rows="4"
-          required
-          style="padding: 0.8rem; border-radius: 0.5rem"
-        ></textarea>
-        <button class="btn" type="submit">Send Message</button>
-      </form>
-    </section>
-
-    <footer>© 2025 SEVI • Built for the Young Innovators Competition.</footer>
-
-    <script>
-      const data = {
-        Hyderabad: { sevi: "B", urban: "88%", castes: "SC 15%, ST 6%, OC 79%" },
-        Visakhapatnam: {
-          sevi: "B",
-          urban: "66%",
-          castes: "SC 17%, ST 8%, OC 75%",
-        },
-        Warangal: { sevi: "A", urban: "37%", castes: "SC 21%, ST 12%, OC 67%" },
-      };
-      document
-        .getElementById("district")
-        .addEventListener("change", function () {
-          const val = this.value;
-          const out = data[val];
-          document.getElementById("demo-output").innerHTML = `
-        <h3>${val}</h3>
-        <p><strong>SEVI Category:</strong> ${out.sevi}</p>
-        <p><strong>Urbanization:</strong> ${out.urban}</p>
-        <p><strong>Caste Composition:</strong> ${out.castes}</p>
-      `;
-        });
-    </script>
-  </body>
+  <!-- Include D3.js and TopoJSON libraries -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://unpkg.com/topojson-client@3"></script>
+  <!-- Link to external JavaScript file -->
+  <script src="static/script.js"></script>
+</body>
 </html>
