temporary map sizing fix for hero section

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="logo-container">
-      <img src="static/assets/white-logo.svg" alt="Logo" href="/">
+      <img class="img-container" src="static/assets/white-logo.svg" alt="Logo" href="/">
       <div class="header-container">
         <h1>SEVI</h1>
-        <h3>Socio-Economic Vulnerability Index</h3>
+        <h2>Socio-Economic Vulnerability Index</h2>
       </div>
     </div>
     <nav class="nav-links">
@@ -26,16 +26,18 @@
       <a href="#about">About</a>
     </nav>
   </nav>
+
   <!-- Hero section with map -->
   <section id="hero">
     <div id="map"></div>
     <div id="tooltip" class="tooltip"></div>
   </section>
   </div>
+
   <!-- D3.js and TopoJSON -->
-  <!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
-  <!-- <script src="https://unpkg.com/topojson-client@3"></script> -->
-  <!-- <script src="static/script.js"></script> -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://unpkg.com/topojson-client@3"></script>
+  <script src="static/script.js"></script>
 </body>
 
 </html>
